# poco_restful_webservice

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  build.properties  build.xml  ci.properties  dev.properties  docker-compose.yml
Foundation/: CMakeLists.txt
Foundation/include/Adapter/Database/: AbstractTableGateway.h  DataSource.h  DataSourceConfigurationFile.h  DataSourceFactory.h  DataSourceFileReader.h  MySQLDataAccessManager.h  MySQLTableGateway.h  SQLiteDataAccessManager.h  SQLiteTableGateway.h
Foundation/include/Adapter/File/: CORSHeadersFromJSONFile.h  CORSHeadersJSONFileReader.h
Foundation/include/Adapter/Hateoas/MediaType/JsonAPI/: JsonAPIAbstractRelatedResourceBuilder.h  JsonAPIAbstractResourceBuilder.h  JsonAPIErrorBuilder.h  JsonAPIFactory.h  JsonAPIResourceBuilder.h  JsonAPIResourceCollectionBuilder.h
Foundation/include/Adapter/Http/: CORSConfiguration.h  CORSConfigurationFileReader.h  DefaultNotFoundErrorHandler.h  ErrorJsonAPIParser.h
Foundation/include/Adapter/Validator/: HttpContentType.h  HttpContentTypeHeaders.h  HttpMethods.h
Foundation/include/Foundation/Application/: AbstractConfiguration.h  AbstractConfigurationFile.h  ConfigurationFileInterface.h  Environment.h  EnvironmentManager.h
Foundation/include/Foundation/Domain/Model/: AbstractEntity.h  AbstractIdentity.h  EntityInterface.h  Identity.h  IdentityInterface.h
Foundation/include/Foundation/Hateoas/: ErrorBuilderInterface.h  ErrorInterface.h  MediaType.h  MediaTypeAbstractFactoryInterface.h  MediaTypeFactory.h  OutputPayloadInterface.h  RelatedResourceBuilderInterface.h  RelatedResourceInterface.h  ResourceBuilderInterface.h  ResourceCollectionBuilderInterface.h  ResourceCollectionInterface.h  ResourceInterface.h
Foundation/include/Foundation/Http/: AbstractResource.h  CORSConfigurationFactory.h  CORSConfigurationFile.h  CORSConfigurationInterface.h  CORSHeadersFactory.h  CORSHeadersInterface.h  ErrorParserInterface.h  ResourceFactoryInterface.h  Router.h  RouterAbstractFactoryInterface.h
Foundation/include/Foundation/IO/: AbstractFileReader.h  AbstractJSONFileReader.h  AbstractJsonFileReader.h  FileReaderInterface.h  JSONFileReaderInterface.h  JsonFileReaderInterface.h
Foundation/include/Foundation/Persistence/Database/: DataAccessManagerFactory.h  DataAccessManagerInterface.h  DataSourceInterface.h  DatabaseAdapter.h  DatabaseAdapterFactory.h  TableGatewayInterface.h
Foundation/include/Foundation/Validator/: ValidatorInterface.h
Foundation/src/Adapter/Database/: AbstractTableGateway.cpp  DataSource.cpp  DataSourceConfigurationFile.cpp  DataSourceFactory.cpp  DataSourceFileReader.cpp  MySQLDataAccessManager.cpp  MySQLTableGateway.cpp  SQLiteDataAccessManager.cpp  SQLiteTableGateway.cpp
Foundation/src/Adapter/File/: CORSHeadersFromJSONFile.cpp  CORSHeadersJSONFileReader.cpp
Foundation/src/Adapter/Hateoas/MediaType/JsonAPI/: JsonAPIAbstractRelatedResourceBuilder.cpp  JsonAPIAbstractResourceBuilder.cpp  JsonAPIErrorBuilder.cpp  JsonAPIFactory.cpp  JsonAPIResourceBuilder.cpp  JsonAPIResourceCollectionBuilder.cpp
Foundation/src/Adapter/Http/: CORSConfiguration.cpp  CORSConfigurationFileReader.cpp  DefaultNotFoundErrorHandler.cpp  ErrorJsonAPIParser.cpp
Foundation/src/Adapter/Validator/: HttpContentType.cpp  HttpContentTypeHeaders.cpp  HttpMethods.cpp
Foundation/src/Foundation/Application/: AbstractConfiguration.cpp  AbstractConfigurationFile.cpp  EnvironmentManager.cpp
Foundation/src/Foundation/Domain/Model/: AbstractEntity.cpp  AbstractIdentity.cpp
Foundation/src/Foundation/Hateoas/: MediaTypeFactory.cpp
Foundation/src/Foundation/Http/: AbstractResource.cpp  CORSConfigurationFactory.cpp  CORSConfigurationFile.cpp  CORSHeadersFactory.cpp  Router.cpp
Foundation/src/Foundation/IO/: AbstractFileReader.cpp  AbstractJSONFileReader.cpp  AbstractJsonFileReader.cpp
Foundation/src/Foundation/Persistence/Database/: DataAccessManagerFactory.cpp  DatabaseAdapterFactory.cpp
Foundation/tests/: CMakeLists.txt
Foundation/tests/Integration/: CMakeLists.txt
Foundation/tests/Integration/Adapter/Database/: SQLiteTableGatewayTest.cpp  TableGatewayTest.cpp
Foundation/tests/Unit/: CMakeLists.txt
Foundation/tests/Unit/Adapter/Database/: DataSourceTest.cpp
Foundation/tests/Unit/Adapter/Database/Context/: FakeDataSourceConfigurationFile.h
Foundation/tests/Unit/Adapter/File/: CORSHeadersFromJSONFileTest.cpp
Foundation/tests/Unit/Adapter/File/Context/: StubCORSHeadersFile.h
Foundation/tests/Unit/Adapter/Hateoas/MediaType/JsonAPI/: JsonAPIErrorBuilderTest.cpp  JsonAPIResourceBuilderTest.cpp  JsonAPIResourceCollectionBuilderTest.cpp
Foundation/tests/Unit/Adapter/Http/: CORSConfigurationTest.cpp  FakeActualResourceTest.cpp  FakeResourceTest.cpp
Foundation/tests/Unit/Adapter/Http/Context/: FakeAbstractFactory.h  FakeActualResource.h  FakeCORSConfigurationFile.h  FakeErrorJsonAPIParser.h  FakeNotFoundError.h  FakeResourceFactory.h  FakeRouter.h
Foundation/tests/Unit/Foundation/Domain/Model/: EntityObjectTest.cpp
Foundation/tests/data/settings/: cors.json  datasource.json
Interface/: CMakeLists.txt
Interface/include/Interface/: Router.h
Interface/include/Interface/Handling/: ApplicationJSONParser.h
Interface/include/Interface/Resource/Factory/: ApplicationFactory.h  Factory.h
Interface/src/Interface/: Container.cpp  Router.cpp
Interface/src/Interface/Resource/: Application.cpp  RouteNotFound.cpp
Interface/src/Interface/Resource/Factory/: ApplicationFactory.cpp
Launcher/: CMakeLists.txt
Poll/tests/Integration/: CMakeLists.txt
Poll/tests/Integration/Adapter/Database/: OptionRepositoryTest.cpp  QuestionRepositoryTest.cpp
test/: CMakeLists.txt  Runner.cpp
test/Domain/Service/: QuestionVotingServiceTest.cpp
test/Infrastructure/Persistence/: QuestionRepositoryTest.cpp  TableGatewayTest.cpp
test/Interface/Handling/: JsonAPIErrorBuilderTest.cpp  QuestionResourceTest.cpp
tests/: CMakeLists.txt
tests/Domain/Model/Poll/: OptionTest.cpp  QuestionTest.cpp
tests/Interface/Handling/: JsonAPIErrorBuilderTest.cpp
(+155 files in other folders)
