SET(MODULE_NAME "Interface")
SET(MODULE_DIRECTORY "Interface")

set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# Poco Library Setup
find_library(POCO_NET PocoNet)
find_library(POCO_UTIL PocoUtil)
find_library(POCO_FOUNDATION PocoFoundation)

find_package(Threads REQUIRED)

# including source code of the project
set(PROJECT_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/src)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)

file(GLOB INTERFACE_SOURCE_FILES_TOP "${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/*.cpp")
file(GLOB_RECURSE INTERFACE_SOURCE_FILES_NESTED
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Handling/*.cpp
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Resource/*.cpp
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Resource/Factory/*.cpp
)
set(INTERFACE_SOURCE_FILES ${INTERFACE_SOURCE_FILES_TOP} ${INTERFACE_SOURCE_FILES_NESTED})

include_directories("${PROJECT_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}")
include_directories(${Poco_INCLUDE_DIRS})

add_library(${MODULE_NAME} SHARED ${INTERFACE_SOURCE_FILES})
target_link_libraries(${MODULE_NAME} ${POCO_FOUNDATION} ${POCO_UTIL} ${POCO_NET})
target_include_directories(${MODULE_NAME} PUBLIC ${PROJECT_INCLUDE_DIR})
