SET(MODULE_NAME "poco_restful_webservice")
SET(MODULE_DIRECTORY "Launcher")

set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(PROJECT_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/src)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${MODULE_DIRECTORY}/bin)

file(GLOB LAUNCHER_SOURCE_FILES "${PROJECT_SOURCE_DIR}/*.cpp")

include_directories("${PROJECT_SOURCE_DIR}")

add_executable(${MODULE_NAME} ${LAUNCHER_SOURCE_FILES})
target_link_libraries(${MODULE_NAME} Interface)
